--- a/style.css
+++ b/style.css
@@ -289,29 +289,15 @@ body {
 
 .clients-track {
   display: flex;
-  animation: slide 25s linear infinite;
-  gap: 80px;
+  animation: slide 12s linear infinite;
+  gap: 60px;
   align-items: center;
 }
 
-.client-logo {
-  height: 45px;
-  min-width: 140px;
-  background: #e5e5e5;
-  border-radius: 6px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #888;
-  font-weight: 600;
-  font-size: 14px;
-  opacity: 0.7;
-  transition: all 0.3s ease;
-}
 
-.client-logo:hover {
-  opacity: 1;
-  background: #ddd;
+.client-logo img{
+  width: 140px;
+  height: 100px;
 }
 
 @keyframes slide {
@@ -656,7 +642,7 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 50px;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 20px;
 }
 
@@ -684,12 +670,13 @@ body {
   border-radius: 50%;
 }
 
-.services-label {
+.services-label1 {
   color: #666;
   font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: 1px;
+  text-align: left;
 }
 
 .main-title {
@@ -699,7 +686,7 @@ body {
   margin-top: 10px;
 }
 
-.view-all-btn {
+.view-all-btn1 {
   background: linear-gradient(135deg, #3a71c4, #4a90e2);
   color: white;
   padding: 12px 24px;
@@ -1051,18 +1038,14 @@ body {
   display: inline-block;
   margin-top: 10px;
   padding: 12px 24px;
-  background-color: #5f48f8;
+  background: linear-gradient(135deg, #3a71c4, #4a90e2);
   color: #fff;
   border: none;
-  border-radius: 6px;
+  border-radius: 26px;
   font-weight: 600;
   text-decoration: none;
   transition: 0.3s ease;
   width: fit-content;
-}
-
-.btn:hover {
-  background-color: #4a38c2;
 }
 
 .right {
@@ -1334,20 +1317,20 @@ body {
   overflow: hidden;
 }
 
-.section-header {
+.section-header2 {
   display: block;
   margin-bottom: 40px;
   text-align: center;
   max-width: 700px;
 }
 
-.section-header p {
+.section-header2 p {
   font-size: 14px;
   color: #374151;
   font-weight: 600;
 }
 
-.section-header h1 {
+.section-header2 h1 {
   font-size: 36px;
   font-weight: 700;
   margin: 10px 0;
@@ -1958,7 +1941,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  color: #d93025;
+  color: #2c5aa0;
   font-weight: bold;
   font-size: 14px;
 }
@@ -1967,27 +1950,19 @@ body {
   display: flex;
   align-items: center;
   gap: 6px;
-  color: #d93025;
+  color: #2c5aa0;
   margin-bottom: 5px;
   font-size: 14px;
+  font-weight: bold;
 }
 
-.view-all-btn {
-  margin-top: 40px;
+.blog-btn {
+  margin-top: -40px;
   padding: 12px 28px;
-  border: 1px solid #000;
-  background: #fff;
-  color: #000;
+  color: #fff;
   border-radius: 30px;
   font-weight: 600;
   text-decoration: none;
   transition: 0.3s;
+  background: linear-gradient(135deg, #3a71c4, #4a90e2);
 }
-
-.view-all-btn:hover {
-  background: #000;
-  color: #fff;
-}
-
-/* footer */
-
