--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ body {
 
 .clients-track {
   display: flex;
-  animation: slide 12s linear infinite;
+  animation: slide 25s linear infinite;
   gap: 60px;
   align-items: center;
 }
@@ -1273,7 +1273,7 @@ body {
 /* New uniform image size styles */
 .portfolio-card-image {
   width: 100%;
-  height: 360px; /* fixed height */
+  height: auto; /* fixed height */
   overflow: hidden;
   border-radius: 12px 12px 0 0;
 }
@@ -1283,6 +1283,8 @@ body {
   height: 100%;
   object-fit: cover;
   display: block;
+  max-height: 520px;
+  background-image: cover;
 }
 
 .portfolio-card-text-info {
