--- a/style.css
+++ b/style.css
@@ -272,6 +272,7 @@ body {
   margin: 0 auto;
   padding: 0 40px;
   text-align: center;
+  margin-top: -100px;
 }
 
 .clients-text {
@@ -636,6 +637,7 @@ body {
   margin: 0 auto;
   padding: 60px 20px;
 }
+
 
 .section-header {
   display: flex;
@@ -1776,9 +1778,11 @@ body {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.07);
 }
 
-.testimonial-card.highlight {
+.testimonial-card:hover {
   background: linear-gradient(90deg, #ff3d3d, #3c41df);
   color: #fff;
+  cursor: pointer;
+  transition: 1s ease-in-out, color 1s ease-in-out, transform 1.5s ease-in-out;
 }
 
 .testimonial-avatar {
@@ -1804,7 +1808,7 @@ body {
 
 .testimonial-role {
   font-size: 14px;
-  color: #777;
+  color: rgb(201, 200, 200);
   margin-bottom: 8px;
 }
 
