--- a/style.css
+++ b/style.css
@@ -1313,6 +1313,10 @@ body {
 
 /* --------- our work ----------- */
 
+#slide {
+  transition: opacity 0.5s ease-in-out;
+}
+
 .process-section {
   padding: 60px 20px;
   min-height: 100vh;
